<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ml.ytooo</groupId>
    <artifactId>ytooo-util</artifactId>
    <version>3.9.0</version>
	<packaging>jar</packaging>
	
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <encoding>UTF-8</encoding>
        <java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
	    <utils.release.version>3.10</utils.release.version>
	    <lombok>1.18.12</lombok>
	    <commons-lang3>3.10</commons-lang3>
	    <fastjson>1.2.68</fastjson>
    </properties>
	
	<name>ytooo-util</name>
	<description>ytooo's utils</description>
	<url>https://www.ytooo.ml</url>
	
	<!--licenses信息-->
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<!--scm信息-->
	<scm>
		<url>http://www.ytooo.ml</url>
		<connection>scm:git:https://github.com/youdmeng/ytooo-util.git</connection>
		<developerConnection>scm:git:https://github.com/youdmeng/ytooo-util.git</developerConnection>
	</scm>
	<!--发布者信息-->
	<developers>
		<developer>
			<name>youdmeng</name>
			<email>youdmeng@hotmail.com</email>
			<organization>http://www.ytooo.ml</organization>
			<organizationUrl>http://www.ytooo.ml</organizationUrl>
		</developer>
	</developers>
	
	<!-- 这里引入 Settings.xml 中设置的用户名、密码 -->
	<distributionManagement>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	

	<dependencyManagement>
		<dependencies>
		
		</dependencies>
	</dependencyManagement>
	
    <dependencies>
	    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok}</version>
        </dependency>
	    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
	    <dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>${commons-lang3}</version>
	    </dependency>
        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>${fastjson}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt</artifactId>
            <version>0.9.1</version>
        </dependency>
	    <dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-context-support</artifactId>
		    <version>5.2.6.RELEASE</version>
	    </dependency>
	    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
	    <dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.7</version>
	    </dependency>
		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		
		<dependency>
		    <groupId>javax.servlet</groupId>
		    <artifactId>javax.servlet-api</artifactId>
		    <version>4.0.1</version>
	    </dependency>
	    <dependency>
		    <groupId>redis.clients</groupId>
		    <artifactId>jedis</artifactId>
		    <version>2.9.0</version>
	    </dependency>
	    <dependency>
		    <groupId>com.belerweb</groupId>
		    <artifactId>pinyin4j</artifactId>
		    <version>2.5.1</version>
	    </dependency>
	    
	    <!-- https://mvnrepository.com/artifact/com.mashape.unirest/unirest-java -->
	    <dependency>
		    <groupId>com.mashape.unirest</groupId>
		    <artifactId>unirest-java</artifactId>
		    <version>1.4.9</version>
	    </dependency>
	    
	    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
	    <dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>29.0-jre</version>
	    </dependency>
	    <!-- https://mvnrepository.com/artifact/net.sf.dozer/dozer -->
	    <dependency>
		    <groupId>net.sf.dozer</groupId>
		    <artifactId>dozer</artifactId>
		    <version>5.5.1</version>
	    </dependency>
	    <!-- https://mvnrepository.com/artifact/org.jdom/jdom2 -->
	    <dependency>
		    <groupId>org.jdom</groupId>
		    <artifactId>jdom2</artifactId>
		    <version>2.0.6</version>
	    </dependency>
		
	    <!-- https://mvnrepository.com/artifact/com.github.houbb/opencc4j -->
	    <dependency>
		    <groupId>com.github.houbb</groupId>
		    <artifactId>opencc4j</artifactId>
		    <version>1.5.1</version>
	    </dependency>


    </dependencies>
	
	<build>
		<plugins>
			<!-- doc plugin,Maven API文档生成插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<failOnError>false</failOnError>
					<doclint>none</doclint>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- resources plugin,Maven 资源插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- compiler plugin,Maven 编译插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerVersion>${java.version}</compilerVersion>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<!-- gpg plugin,用于签名认证 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--staging puglin,用于自动执行发布阶段(免手动)-->
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<!-- release plugin,用于发布到release仓库部署插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
			</plugin>
		</plugins>
		
	</build>
	
</project>
